# team_creation_studio

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: MILESTONES.md  PROJECT_OVERVIEW.md  WORKSPACE_SCHEMA.md
src/team_creator_studio/: __init__.py  __main__.py  main.py
src/team_creator_studio/config/: __init__.py  settings.py
src/team_creator_studio/core/: __init__.py  models.py  renderer.py  services.py  validation.py
src/team_creator_studio/imaging/: __init__.py  color.py  io.py
src/team_creator_studio/ops/: __init__.py  color_replace.py
src/team_creator_studio/storage/: __init__.py  workspace.py
src/team_creator_studio/ui/: __init__.py  app.py  theme.py
src/team_creator_studio/ui/views/: __init__.py  editor_view.py  layers_panel.py  project_browser.py
src/team_creator_studio/ui/widgets/: __init__.py  scrollable_frame.py
src/team_creator_studio/utils/: __init__.py  slugify.py
workspace/templates/: palette.schema.json  project_meta.schema.json
